--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -77,7 +77,7 @@ const hobbies = [
 					))
 				}
 			</div>
-			<div slot="main-content" class="md:pr-4 w-full h-full overflow-auto">
+			<div slot="main-content" class="md:pr-4 w-full h-full">
 				<div class="flex flex-col xl:flex-row gap-8 px-4 w-full">
 					<div class='text-white project-details flex-1'>
 						<AboutMe.Content />
