--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -54,7 +54,7 @@ const projects = [
 		type: "other"
 	},
 	{
-		heading: "UNALTERED Fitness Minute",
+		heading: "Fitness Minutes",
 		subheading: "Series of educational videos produced for social media.",
 		path: "/projects/unaltered-fitness-minute",
 		icon: "unaltered",
@@ -79,14 +79,14 @@ const projects = [
 					projects.map((project, index) => (
 						<a href={project.path} class={`flex items-center max-w-full justify-between py-4 sm:p-4 ${index !== projects.length - 1 ? "border-b" : ""} border-emerald-700`}>
 							<div class="flex gap-2 text-white">
-								<div class="flex p-2">
+								<div class="flex p-1 sm:-2">
 									<div class="bg-[#1c1c1c] outline outline-1 outline-offset-2 outline-emerald-400 p-2 w-[50px] h-[50px] flex items-center rotate-45 scale-75 relative after:content-[''] after:h-[1px] after:w-[200px] after:-rotate-45 after:bg-gradient-to-r from-emerald-400 after:absolute after:-top-[72px] after:left-[22px]">
 										<Icon class='invert w-full -rotate-45' name={project.icon} />
 									</div>
 								</div>
-								<div class='flex flex-col gap-2'>
-									<div class="text-xl font-thin whitespace-nowrap">{project.heading}</div>
-									<div class="text-sm pt-1">{project.subheading}</div>
+								<div class='flex flex-col gap-2 w-full'>
+									<div class="text-sm sm:text-xl font-thin whitespace-nowrap">{project.heading}</div>
+									<div class="text-xs sm:text-sm pt-3 sm:pt-1">{project.subheading}</div>
 									<div class="flex flex-wrap text-xs gap-x-4 gap-y-2">{project.stack.map((item, index) => (<div>{item}</div>))}</div>
 								</div>
 							</div>
