added product branding and other fixes

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -45,11 +45,11 @@ const projects = [
 		stack: ["React", "Tailwind", "NextJS"],
 	},
 	{
-		heading: "Hormone Balance",
-		subheading: "Product branding for a nutritional supplement.",
-		path: "/projects/hormone-balance",
+		heading: "UNALTERED Products",
+		subheading: "Product branding for various nutritional supplements.",
+		path: "/projects/unaltered-products",
 		icon: "unaltered",
-		photo: "/assets/hormone_1.png",
+		photo: "/assets/unaltered_website_1.jpg",
 		stack: ["Illustrator", "Photoshop", "Cinema 4D"],
 		type: "other"
 	},
@@ -97,7 +97,7 @@ const projects = [
 					))
 				}
 			</div>
-			<div slot="main-content" class="hidden xl:flex items-center justify-center w-full h-full">
+			<div slot="main-content" class="hidden xl:flex items-center w-full h-full">
 				<div class="flex">
 					{
 						projects.map((project, index) => (
