--- a/src/layouts/project.astro
+++ b/src/layouts/project.astro
@@ -48,6 +48,10 @@ const stackIcons = {
 		icon: "fa-brands:shopify",
 		label: "Shopify Polaris"
 	},
+	liquid: {
+		icon: "fa-brands:shopify",
+		label: "Liquid"
+	},
 	express: {
 		icon: "simple-icons:express",
 		label: "ExpressJS"
@@ -145,11 +149,13 @@ const stackIcons = {
 					</div>
 					<div class="w-full max-w-lg">
 						{
-							frontmatter.video_id && 
-							<div class="mb-4 xl:max-w-lg w-full">
-								<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src={`https://www.youtube.com/embed/${frontmatter.video_id}`} frameborder='0' allowfullscreen></iframe></div>
-								<div class="text-white p-4  bg-[#1c1c1ce0]  w-full ">{frontmatter.video_caption}</div>
-							</div>
+							frontmatter.videos && 
+							frontmatter.videos.map((videoId: string, index: number) => (
+								<div class="mb-8 xl:max-w-lg w-full">
+									<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src={`https://www.youtube.com/embed/${videoId}`} frameborder='0' allowfullscreen></iframe></div>
+									<div class="text-white p-4  bg-[#1c1c1ce0]  w-full ">{frontmatter.video_captions[index]}</div>
+								</div>
+							))
 						}
 						{
 							frontmatter.images.map((item: string, index: number) => {
