--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -72,11 +72,11 @@ const socialLinks = [
 				<div class=" max-w-xl px-4">
 					<h2 class="mt-0">Feel free to message me any way you prefer.</h2>
 					<p class="mb-0">I'll get back to you as soon as possible!</p>
-					<div class="flex flex-col sm:flex-row">
-						<a href="tel:8134516954" class="flex items-center flex-1 py-2 sm:py-4 mt-2 transition-all hover:text-emerald-300" target="_blank" rel="noopener noreferrer">
+					<div class="flex flex-col lg:flex-row">
+						<a href="tel:8134516954" class="flex items-center flex-1 py-2 lg:py-4 mt-2 lg:mt-0 transition-all hover:text-emerald-300" target="_blank" rel="noopener noreferrer">
 							<Icon name="mdi:phone" class='max-w-[20px] mr-2' /> (813)-451-6954
 						</a>
-						<a href="mailto:cdm.vfx@gmail.com" class="flex items-center flex-1 py-2 mb-2 sm:py-4 transition-all hover:text-emerald-300" target="_blank" rel="noopener noreferrer">
+						<a href="mailto:cdm.vfx@gmail.com" class="flex items-center flex-1 py-2 mb-2 lg:mb-0 lg:py-4 transition-all hover:text-emerald-300" target="_blank" rel="noopener noreferrer">
 							<Icon name="mdi:email" class='max-w-[20px] mr-2' /> cdm.vfx@gmail.com
 						</a>
 					</div>
