--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -2,34 +2,32 @@
 import SidebarText from "../components/Elements/SidebarText.astro";
 import Hero from "../components/Hero.astro";
 import MainHead from "../components/MainHead.astro";
-import { Icon } from 'astro-icon'
-
+import { Icon } from "astro-icon";
 ---
 
 <html lang="en">
-	<head>
-		<MainHead />
-		<style is:global>
-
-			.btn {
-				padding: 10px 20px;
-				margin-top: 10px;
-			}
-		</style>
-	</head>
-	<body>
-		<Hero pageTitle="Resume">
-			<a href="/files/Carlos Montero Resume.pdf" slot="side-content" download class='btn mr-4 w-full tracking-widest text-sm text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500'>
+  <head>
+    <MainHead />
+    <style is:global>
+      .btn {
+        padding: 10px 20px;
+        margin-top: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <Hero pageTitle="Resume">
+      <!-- <a href="/files/Carlos Montero Resume.pdf" slot="side-content" download class='btn mr-4 w-full tracking-widest text-sm text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500'>
 				<div class="flex justify-center items-center gap-2">
 					<Icon name="mdi:download" class='w-[2em]' />
 					Download PDF
 				</div>
-			</a>
-			<div slot="main-content" class="w-full h-full overflow-y-auto">
-				<div class="max-w-2xl h-full p-4 sm:p-0 m-auto">
-					<img class="" src='/files/Carlos Montero Resume.svg' />
-				</div>
-			</div>
-		</Hero>
-	</body>
+			</a> -->
+      <div slot="main-content" class="w-full h-full overflow-y-auto">
+        <div class="max-w-2xl h-full p-4 sm:p-0 m-auto">
+          <!-- <img class="" src='/files/Carlos Montero Resume.svg' /> -->
+        </div>
+      </div>
+    </Hero>
+  </body>
 </html>
